Changed from markdown to good old HTML in metalsmith. Ah.. That was better..

--- a/html/layouts/partials/footer.html
+++ b/html/layouts/partials/footer.html
@@ -1,11 +1,10 @@
+<hr/>
 <footer>
     <nav class="page">
         <ul>
             <li><a href="index.html">Home</a></li>
+            <li><a href="html.html">HTML</a></li>
             <li><a href="partials.html">Partials</a></li>
-            <li><a href="partials-markdown.html">Partials from markdown</a></li>
-            <li><a href="image.html">With Image</a></li>
-            <li><a href="image-unsplash.html">With image from Unsplash</a></li>
             <li><a href="list.html">List from array</a></li>
         </ul>
     </nav>
