--- a/html/layouts/partials/hero.html
+++ b/html/layouts/partials/hero.html
@@ -1,3 +1,3 @@
-<header>
-    {{ title }}
+<header style="background: #eee; padding: 2rem; margin: 1rem;">
+    I am a partial and the title you sent me is: {{ title }}
 </header>
