Installed a KSS styleguide generator and made a basic structure

--- a/scss/1_tools/_animations.scss
+++ b/scss/1_tools/_animations.scss
@@ -4,13 +4,13 @@ Animations
 Animation classes for keyframe animations.
 Use @extend %class
 
-%scaleUp - Scale up
-%slideFromLeft - Slide from left
-%slideFromRight - Slide from right
+%scale-up - Scale up
+%slide-rom-left - Slide from left
+%slide-from-right - Slide from right
 %rotate - Rotate
 %shake - Shake
 
-Styleguide 1.1
+Styleguide 1.2
 */
 
 %fade-in {
