--- a/scss/1_tools/_mixins.scss
+++ b/scss/1_tools/_mixins.scss
@@ -1,6 +1,12 @@
-// ------------------------------------
-// Breakpoints
-// ------------------------------------
+/*
+Mixins
+
+Mixins to use in scss files
+
+breakpoint() -Standard breakpoint method
+
+Styleguide 1.1
+*/
 
 /*
 rem-calc($size)
