--- a/scss/2_base/_fonts.scss
+++ b/scss/2_base/_fonts.scss
@@ -1,7 +1,8 @@
-// ------------------------------------
-// Fonts
-// ------------------------------------
+/*
+Fonts
 
+No styleguide reference.
+*/
 @import url('https://fonts.googleapis.com/css?family=Arvo:400,700');
 
 /*
