--- a/scss/3_blocks/_button.scss
+++ b/scss/3_blocks/_button.scss
@@ -9,7 +9,7 @@ Markup:
 .button--primary - Primary button
 .button--secondary - Secondary button
 
-Styleguide 3.1
+Style guide: components
 */
 
 .button {
